// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > colors > renders danger color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden flex items-center justify-center transition-colors duration-200 ease-in-out gap-2 transition-colors duration-300 ease-in-out h-9 rounded-xl px-3 py-2 flex-row transition-colors duration-300 ease-in-out h-9 text-pca-white bg-pca-red-500 hover:bg-pca-red-700 focus:outline-hidden focus:ring-2 focus:ring-pca-red-300 dark:focus:ring-pca-red-700"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none -translate-y-px"
    >
      danger
    </span>
  </button>
</div>
`;

exports[`Button > colors > renders primary color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden flex items-center justify-center transition-colors duration-200 ease-in-out gap-2 transition-colors duration-300 ease-in-out h-9 rounded-xl px-3 py-2 flex-row transition-colors duration-300 ease-in-out h-9 text-pca-white dark:text-pca-grey-900  bg-pca-grey-900 dark:bg-pca-white hover:bg-pca-grey-800 dark:hover:bg-pca-grey-300 focus:outline-hidden focus:ring-2 focus:ring-pca-grey-300"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none -translate-y-px"
    >
      primary
    </span>
  </button>
</div>
`;

exports[`Button > colors > renders secondary color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden flex items-center justify-center transition-colors duration-200 ease-in-out gap-2 transition-colors duration-300 ease-in-out h-9 rounded-xl px-3 py-2 flex-row transition-colors duration-300 ease-in-out h-9 text-pca-grey-900 dark:text-pca-white bg-transparent dark:bg-pca-grey-900 hover:bg-pca-grey-200 dark:hover:bg-pca-grey-800 focus:outline-hidden focus:ring-2 focus:ring-pca-grey-300 dark:focus:ring-pca-grey-700"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none -translate-y-px"
    >
      secondary
    </span>
  </button>
</div>
`;

exports[`Button > colors > renders upgrade color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden flex items-center justify-center transition-colors duration-200 ease-in-out gap-2 transition-colors duration-300 ease-in-out h-9 rounded-xl px-3 py-2 flex-row transition-colors duration-300 ease-in-out h-9 text-pca-grey-900 bg-pca-yellow-500 hover:bg-pca-yellow-700 focus:outline-hidden focus:ring-2 focus:ring-pca-yellow-300"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none -translate-y-px"
    >
      upgrade
    </span>
  </button>
</div>
`;
